--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,10 @@ name: test
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-  schedule:
-    - cron: 0 * * * *
+  #push:
+ # schedule:
+  #  - cron: "*/5 * * * *"
+  workflow_dispatch: # manual wf run 
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
